--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,9 +27,10 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "composite": true
   },
   "include": [
-    "src"
+    "./src"
   ],
 }
